# null-browser

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: PHILOSOPHY.md
docs/screenshots/: README.md
scripts/: cargo-signed.sh  setup-dev-signing.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: dock.rs  lib.rs  main.rs  menu.rs
src-tauri/src/ai/: anthropic.rs  cache.rs  dispatch.rs  mod.rs  ollama.rs  openai.rs  provider.rs  secrets.rs
src-tauri/src/commands/: ai.rs  artifacts.rs  bookmarks.rs  chats.rs  history.rs  meta.rs  mod.rs  network.rs  search.rs  tabs.rs
src-tauri/src/network/: mod.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/storage/: migrations.rs  mod.rs
src-tauri/src/webview/: extract.rs  mod.rs
src/components/: TopProgress.tsx
src/components/panels/: AIDrawer.tsx  HistoryPanel.tsx  NetworkInspector.tsx  PanelHeader.tsx  ProfileMenu.tsx  SettingsPanel.tsx
src/components/ui/: button.tsx
src/lib/: ipc.ts  layout.ts  preferences.ts  theme.ts  url.ts  utils.ts
