[package]
name = "null"
version = "0.1.0"
description = "An open-source privacy-first web browser."
authors = ["Ieuan <ieuan@ubik.studio>"]
license = "MPL-2.0"
repository = "https://github.com/akaieuan/null-browser"
edition = "2021"
rust-version = "1.77"

[lib]
name = "null_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
